examples/errors/12_invalid_struct_access/invalid_struct_access.txy
struct Ponto
  x: int;
  y: int;
endstruct;

proc main()
  var p: Ponto = new Ponto { x: 1, y: 2 };
  p.valor;
  println("Ok");
endproc;
